tests/neg/i10603b.scala
import language.`3.0-migration`

object Test {
  val x = implicitly[List[Boolean]] // error
}
